# 42-piscine-python

./: .gitignore  README.md  pyproject.toml
src/cell01/ex00/: name.py
src/cell01/ex01/: name.py
src/cell01/ex02/: age.py
src/cell01/ex03/: whatsyourname.py
src/cell02/ex00/: iszero.py
src/cell02/ex01/: isneg.py
src/cell02/ex02/: password.py
src/cell02/ex03/: mult.py
src/cell03/ex00/: to25.py
src/cell03/ex01/: multiplication_table.py
src/cell03/ex02/: i_got_that.py
src/cell03/ex03/: advanced_mult.py
src/cell04/ex00/: upcase_it.py
src/cell04/ex01/: age.py
src/cell04/ex02/: calculator.py
src/cell04/ex03/: float.py
src/cell04/ex04/: round_up.py
src/cell04/ex05/: up_low.py
src/cell05/ex00/: create_array.py
src/cell05/ex01/: play_with_arrays.py
src/cell05/ex02/: play_with_arrays.py
src/cell05/ex03/: play_with_arrays.py
src/cell05/ex04/: parameters.py
src/cell05/ex05/: aff_first_param.py
src/cell05/ex06/: upcase_it.py
src/cell05/ex07/: downcase_it.py
src/cell05/ex08/: aff_rev_params.py
src/cell05/ex09/: scan_it.py
src/cell05/ex10/: parameter_matching.py
src/cell05/ex11/: count_it.py
src/cell05/ex12/: string_are_arrays.py
src/cell05/ex13/: append_it.py
src/cell05/ex14/: free_range.py
src/cell06/ex00/: hello_all.py
src/cell06/ex01/: upcase_it.py
src/cell06/ex02/: downcase_all.py
src/cell06/ex03/: greetings_for_all.py
src/cell06/ex04/: methods_everywhere.py
tests/: test_cell00.py  test_cell01.py  test_cell02.py  test_cell03.py  test_cell04.py  test_cell05.py  test_cell06.py  test_cell07.py
(+5 files in other folders)
